--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <li>
       UF1
       <ul>
-        <a href="UF1/MP08UF1e1"><li>MP08UF1e1</li></a>
-        <a href="UF1/MP08UF1001"><li>MP08UF1001</li></a>
-        <a href="UF1/MP08UF1002A"><li>MP08UF1002A</li></a>
-        <a href="UF1/MP08UF1002B"><li>MP08UF1002B</li></a>
-        <a href="UF1/MP08UF1002C"><li>MP08UF1002C</li></a>
-        <a href="UF1/MP08UF1003"><li>MP08UF1003</li></a>
-        <a href="UF1/MP08UF1004"><li>MP08UF1004</li></a>
-        <a href="UF1/MP08UF1005"><li>MP08UF1005</li></a>
-        <a href="UF1/MP08UF1006"><li>MP08UF1006</li></a>
+        <a href="UF1/MP08UF1e1/index.html"><li>MP08UF1e1</li></a>
+        <a href="UF1/MP08UF1001/index.html"><li>MP08UF1001</li></a>
+        <a href="UF1/MP08UF1002A/index.html"><li>MP08UF1002A</li></a>
+        <a href="UF1/MP08UF1002B/index.html"><li>MP08UF1002B</li></a>
+        <a href="UF1/MP08UF1002C/index.html"><li>MP08UF1002C</li></a>
+        <a href="UF1/MP08UF1003/index.html"><li>MP08UF1003</li></a>
+        <a href="UF1/MP08UF1004/index.html"><li>MP08UF1004</li></a>
+        <a href="UF1/MP08UF1005/index.html"><li>MP08UF1005</li></a>
+        <a href="UF1/MP08UF1006/index.html"><li>MP08UF1006</li></a>
       </ul>
     </li>
     <li>UF2</li>
@@ -28,7 +28,7 @@
     <li>
       UF4
       <ul>
-        <a href="UF4/MP08UF4001"><li>MP08UF4001</li></a>
+        <a href="UF4/MP08UF4001/index.html"><li>MP08UF4001</li></a>
       </ul>
     </li>
   </ul>
