--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
     <li>
       UF1
       <ul>
-        <a href="UF1/MP08UF1e1/index.html"><li>MP08UF1e1</li></a>
-        <a href="UF1/MP08UF1001/index.html"><li>MP08UF1001</li></a>
-        <a href="UF1/MP08UF1002A/index.html"><li>MP08UF1002A</li></a>
-        <a href="UF1/MP08UF1002B/index.html"><li>MP08UF1002B</li></a>
-        <a href="UF1/MP08UF1002C/index.html"><li>MP08UF1002C</li></a>
-        <a href="UF1/MP08UF1003/index.html"><li>MP08UF1003</li></a>
-        <a href="UF1/MP08UF1004/index.html"><li>MP08UF1004</li></a>
-        <a href="UF1/MP08UF1005/index.html"><li>MP08UF1005</li></a>
-        <a href="UF1/MP08UF1006/index.html"><li>MP08UF1006</li></a>
+        <a class="correccio" href="UF1/MP08UF1e1/index.html"><li>Corrección de exámen</li></a>
+        <a class="feedly" href="UF1/MP08UF1001/index.html"><li>Feedly</li></a>
+        <a class="floata" href="UF1/MP08UF1002A/index.html"><li>Float A</li></a>
+        <a class="floatb" href="UF1/MP08UF1002B/index.html"><li>Float B</li></a>
+        <a class="floatc" href="UF1/MP08UF1002C/index.html"><li>Float C</li></a>
+        <a class="comic" href="UF1/MP08UF1003/index.html"><li>Cómic</li></a>
+        <a class="escacs" href="UF1/MP08UF1004/index.html"><li>Escacs</li></a>
+        <a class="apps" href="UF1/MP08UF1005/index.html"><li>Comparativa apps</li></a>
+        <a class="cara" href="UF1/MP08UF1006/index.html"><li>Cara</li></a>
       </ul>
     </li>
     <li>
       UF2
       <ul>
-      <a href="UF2/MP08UF2001/index.html"><li>MP08UF2001</li></a>
+      <a class="floreta" href="UF2/MP08UF2001/index.html"><li>Floreta</li></a>
     </ul>
     </li>
     <li>UF3</li>
     <li>
       UF4
       <ul>
-        <a href="UF4/MP08UF4001/index.html"><li>MP08UF4001</li></a>
+        <a class="feedly" href="UF4/MP08UF4001/index.html"><li>MP08UF4001</li></a>
       </ul>
     </li>
   </ul>
