--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <li>
       UF1
       <ul>
-        <a class="correccio" href="UF1/MP08UF1e1/index.html"><li>Corrección de exámen</li></a>
+        <a class="correccio" href="UF1/MP08UF1e1/index.html"><li>Correcció</li></a>
         <a class="feedly" href="UF1/MP08UF1001/index.html"><li>Feedly</li></a>
         <a class="floata" href="UF1/MP08UF1002A/index.html"><li>Float A</li></a>
         <a class="floatb" href="UF1/MP08UF1002B/index.html"><li>Float B</li></a>
         <a class="floatc" href="UF1/MP08UF1002C/index.html"><li>Float C</li></a>
         <a class="comic" href="UF1/MP08UF1003/index.html"><li>Cómic</li></a>
         <a class="escacs" href="UF1/MP08UF1004/index.html"><li>Escacs</li></a>
-        <a class="apps" href="UF1/MP08UF1005/index.html"><li>Comparativa apps</li></a>
+        <a class="apps" href="UF1/MP08UF1005/index.html"><li>Apps</li></a>
         <a class="cara" href="UF1/MP08UF1006/index.html"><li>Cara</li></a>
       </ul>
     </li>
@@ -35,7 +35,7 @@
     <li>
       UF4
       <ul>
-        <a class="feedly" href="UF4/MP08UF4001/index.html"><li>MP08UF4001</li></a>
+        <a class="responsive" href="UF4/MP08UF4001/index.html"><li>Responsive</li></a>
       </ul>
     </li>
   </ul>
