--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/desktop.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&display=swap" rel="stylesheet">
   <title>Portafoli</title>
 </head>
 <body>
   <ul>
-    <li>
+    <li class="uf1">
       UF1
       <ul>
         <a class="correccio" href="UF1/MP08UF1e1/index.html"><li>Correcció</li></a>
@@ -23,12 +26,12 @@
         <a class="escacs" href="UF1/MP08UF1004/index.html"><li>Escacs</li></a>
         <a class="apps" href="UF1/MP08UF1005/index.html"><li>Apps</li></a>
         <a class="cara" href="UF1/MP08UF1006/index.html"><li>Cara</li></a>
-        <a class="floreta" href="UF2/MP08UF1007/index.html"><li>Floreta</li></a>
+        <a class="floreta" href="UF1/MP08UF1007/index.html"><li>Floreta</li></a>
       </ul>
     </li>
-    <li>UF2</li>
-    <li>UF3</li>
-    <li>
+    <li class="uf2">UF2</li>
+    <li class="uf3">UF3</li>
+    <li class="uf4">
       UF4
       <ul>
         <a class="responsive" href="UF4/MP08UF4001/index.html"><li>Responsive</li></a>
