--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <li class="uf1">
       UF1
       <ul>
-        <a class="correccio" href="UF1/MP08UF1e1/index.html"><li>Correcció</li></a>
-        <a class="feedly" href="UF1/MP08UF1001/index.html"><li>Feedly</li></a>
-        <a class="floata" href="UF1/MP08UF1002A/index.html"><li>Float A</li></a>
-        <a class="floatb" href="UF1/MP08UF1002B/index.html"><li>Float B</li></a>
-        <a class="floatc" href="UF1/MP08UF1002C/index.html"><li>Float C</li></a>
-        <a class="comic" href="UF1/MP08UF1003/index.html"><li>Cómic</li></a>
-        <a class="escacs" href="UF1/MP08UF1004/index.html"><li>Escacs</li></a>
-        <a class="apps" href="UF1/MP08UF1005/index.html"><li>Apps</li></a>
-        <a class="cara" href="UF1/MP08UF1006/index.html"><li>Cara</li></a>
-        <a class="floreta" href="UF1/MP08UF1007/index.html"><li>Floreta</li></a>
+        <a href="UF1/MP08UF1e1/index.html"><li class="correccio">Correcció</li></a>
+        <a href="UF1/MP08UF1001/index.html"><li class="feedly">Feedly</li></a>
+        <a href="UF1/MP08UF1002A/index.html"><li class="floata">Float A</li></a>
+        <a href="UF1/MP08UF1002B/index.html"><li class="floatb">Float B</li></a>
+        <a href="UF1/MP08UF1002C/index.html"><li class="floatc">Float C</li></a>
+        <a href="UF1/MP08UF1003/index.html"><li class="comic">Cómic</li></a>
+        <a href="UF1/MP08UF1004/index.html"><li class="escacs">Escacs</li></a>
+        <a href="UF1/MP08UF1005/index.html"><li class="apps">Apps</li></a>
+        <a href="UF1/MP08UF1006/index.html"><li class="cara">Cara</li></a>
+        <a href="UF1/MP08UF1007/index.html"><li class="floreta">Floreta</li></a>
       </ul>
     </li>
     <li class="uf2">UF2</li>
@@ -34,7 +34,7 @@
     <li class="uf4">
       UF4
       <ul>
-        <a class="responsive" href="UF4/MP08UF4001/index.html"><li>Responsive</li></a>
+        <a href="UF4/MP08UF4001/index.html"><li class="responsive">Responsive</li></a>
       </ul>
     </li>
   </ul>
