--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <ul>
     <li class="uf1">
-      UF1
+      <h3>UF1</h3>
       <ul>
         <a href="UF1/MP08UF1e1/index.html"><li class="correccio">Correcció</li></a>
         <a href="UF1/MP08UF1001/index.html"><li class="feedly">Feedly</li></a>
@@ -29,10 +29,10 @@
         <a href="UF1/MP08UF1007/index.html"><li class="floreta">Floreta</li></a>
       </ul>
     </li>
-    <li class="uf2">UF2</li>
-    <li class="uf3">UF3</li>
+    <li class="uf2"><h3>UF2</h3></li>
+    <li class="uf3"><h3>UF3</h3></li>
     <li class="uf4">
-      UF4
+      <h3>UF4</h3>
       <ul>
         <a href="UF4/MP08UF4001/index.html"><li class="responsive">Responsive</li></a>
       </ul>
