--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <title>Portafoli</title>
 </head>
 <body>
+  <video muted autoplay loop>
+    <source src="video/vid.mp4" type="video/mp4">
+    </video>
   <ul>
     <li class="uf1">
       <h3>UF1</h3>
