--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <title>Portafoli</title>
 </head>
 <body>
-
+  <video muted autoplay loop>
+    <source src="video/matrix.mp4" type="video/mp4">
+  </video>
 
   <ul>
     <li class="uf1">
