--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
   </video>
 
   <ul>
+    <div class="barra">
+  <a href="#UF1"><h2>UF1</h2></a>
+  <a href="#UF2"><h2>UF2</h2></a>
+  <h3>Portafoli d'Aitor</h3>
+  <a href="#UF3"><h2>UF3</h2></a>
+  <a href="#UF4"><h2>UF4</h2></a>
+
+
+    </div>
     <li class="uf1">
-      <h3>UF1</h3>
+      <h3 id="UF1">UF1</h3>
       <ul>
         <a href="UF1/MP08UF1e1/index.html"><li class="correccio">Correcció</li></a>
         <a href="UF1/MP08UF1001/index.html"><li class="feedly">Feedly</li></a>
@@ -37,10 +46,10 @@
         <a href="UF1/MP08UF1007/index.html"><li class="floreta">Floreta</li></a>
       </ul>
     </li>
-    <li class="uf2"><h3>UF2</h3></li>
-    <li class="uf3"><h3>UF3</h3></li>
+    <li class="uf2"><h3 id="UF2">UF2</h3></li>
+    <li class="uf3"><h3 id="UF3">UF3</h3></li>
     <li class="uf4">
-      <h3>UF4</h3>
+      <h3 id="UF4">UF4</h3>
       <ul>
         <a href="UF4/MP08UF4001/index.html"><li class="responsive">Responsive</li></a>
       </ul>
