--- a/UF4/MP08UF4001/index.html
+++ b/UF4/MP08UF4001/index.html
@@ -18,7 +18,7 @@
 
 
   <div id="alternador">
-  <input type="checkbox" id="alternador">
+  <input type="checkbox" id="alterna">
   <label for="alterna">
   <b></b>
   <b></b>
@@ -27,7 +27,7 @@
 
 
 
-    <ul class="activitats">
+    <ul class="desplega">
       <li class="uf1">
         UF1
         <ul class="interior">
