--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
   <meta name="theme-color" content="turquoise">
   <meta name="msapplication-navbutton-color" content="turquoise">
-  
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="yes">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&display=swap" rel="stylesheet">
