--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="barra">
   <a href="#UF1"><h2>UF1</h2></a>
   <a href="#UF2"><h2>UF2</h2></a>
-  <h3>Portafoli d'Aitor</h3>
+  <h3>Portafoli</h3>
   <a href="#UF3"><h2>UF3</h2></a>
   <a href="#UF4"><h2>UF4</h2></a>
     </div>
