--- a/UF1/MP08UF1001/index.html
+++ b/UF1/MP08UF1001/index.html
@@ -2,6 +2,8 @@
 <html lang="ca" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Feedly</title>
     <link rel="stylesheet" href="css/estils.css">
   </head>
