--- a/UF1/MP08UF1002A/index.html
+++ b/UF1/MP08UF1002A/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>FloatA</title>
     <meta author="Aitor">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/estils.css">
   </head>
   <body>
