--- a/UF1/MP08UF1005/index.html
+++ b/UF1/MP08UF1005/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta author="Aitor">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Comparativa Apps gestió esportiva</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/screen.css" media="screen">
